# HiringPayTv

./: CMakeLists.txt  README.md  main.cpp
include/: Client.h  JsonReader.h
src/: Client.cpp  JsonReader.cpp
test/: TestCase.cpp
